k8s/monitoring/gatus/resources/gatus.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      serviceAccountName: service-account
      containers:
        - image: ghcr.io/twin/gatus:v5.15.0@sha256:45686324db605e57dfa8b0931d8d57fe06298f52685f06aa9654a1f710d461bb
          name: gatus
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          resources:
            requests:
              memory: 100M
            limits:
              memory: 500M
          ports:
            - name: web
              containerPort: 8080
          volumeMounts:
            - name: data-volume
              mountPath: /data
            - name: config
              mountPath: /config
            - name: config-map
              mountPath: /config/gatus.yml
              subPath: gatus.yml
              readOnly: true
        - image: ghcr.io/kiwigrid/k8s-sidecar:2.1.2@sha256:283bd5bc4320fbc7e8e11844dd65eaadd6e555313faf87459bfe130d3e4e688e
          name: config-sync
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-volume
        - name: config-map
          configMap:
            name: gatus-config
        - name: config
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: service
  annotations:
    prometheus.io/scrape: 'true'
spec:
  ports:
    - name: web
      port: 80
      targetPort: web
