k8s/monitoring/gatus/resources/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    gethomepage.dev/href: 'https://status.durbin.casa'
    gethomepage.dev/enabled: 'true'
    gethomepage.dev/app: gatus
    gethomepage.dev/group: Status
    gethomepage.dev/icon: gatus
    gethomepage.dev/name: Gatus
    cert-manager.io/cluster-issuer: cloudflare-issuer
    external-dns.alpha.kubernetes.io/target: external.durbin.casa
spec:
  ingressClassName: external
  rules:
    - host: &host status.durbin.casa
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: service
                port:
                  name: web
  tls:
    - secretName: durbin-casa-wildcard-cert
      hosts:
        - *host
